--- a/web/javascript/App/Home/SideBar/SideBar.scss
+++ b/web/javascript/App/Home/SideBar/SideBar.scss
@@ -7,7 +7,9 @@
   z-index: 98;
   padding: 0;
   overflow: hidden;
+  background: white;
   border-right: 1px solid #DFE2E9;
+  border-top: 1px solid #DFE2E9;
 
 
   .sidebar-inner {
