--- a/web/javascript/App/Style/index.scss
+++ b/web/javascript/App/Style/index.scss
@@ -12,13 +12,13 @@ $blue: #488eff !default;
 
 // Update Bulma's global variables
 $family-sans-serif: "Roboto", sans-serif;
-//$grey-dark: $brown;
 //$grey-light: $beige-light;
 //$primary: $purple;
 $link: $blue;
 
 // Update some of Bulma's component variables
 $control-border-width: 1px;
+$body-background-color: #f0f2f5;
 $input-shadow: none;
 
 // Import the rest of Bulma
