--- a/web/javascript/App/Logo/Logo.scss
+++ b/web/javascript/App/Logo/Logo.scss
@@ -15,7 +15,7 @@
     margin: 30px 0 0 30px;
     width: 220px;
     height: 51px;
-    background: url(../Image/logo.png) no-repeat center;
+    background: url(../Image/bg-logo.png) no-repeat center;
     background-size: 220px 51px;
   }
 }
