fix style according to the design

--- a/web/src/App/Style/index.scss
+++ b/web/src/App/Style/index.scss
@@ -4,6 +4,8 @@
 // Set your brand colors
 $blue: #488eff !default;
 
+
+$border-color: #dfe2e9;
 // Update Bulma's global variables
 $family-sans-serif: "Roboto", sans-serif;
 $link: $blue;
@@ -12,6 +14,7 @@ $link: $blue;
 $control-border-width: 1px;
 $body-background-color: #f0f2f5;
 $input-shadow: none;
+$input-border-color: #dfe2e9;
 
 // Import the rest of Bulma
 @import "~bulma";
