--- a/web/src/App/Home/NavBar/NavBar.scss
+++ b/web/src/App/Home/NavBar/NavBar.scss
@@ -1,6 +1,7 @@
 .navbar {
   position: fixed;
   width: 100%;
+  min-width: 1280px;
   border-bottom: 1px solid #DFE2E9;
 
   .logo {
@@ -19,34 +20,104 @@
   }
 
   .search-input {
-    width: 412px;
+    width: 388px;
+    height: 48px;
   }
 
   input::-webkit-input-placeholder { /* WebKit browsers */
-    font-size: medium;
+    width: 197px;
+    height: 16px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #c4c7ce;
   }
 
   input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    font-size: medium;
+    width: 197px;
+    height: 16px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #c4c7ce;
   }
 
   input::-moz-placeholder { /* Mozilla Firefox 19+ */
-    font-size: medium;
+    width: 197px;
+    height: 16px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #c4c7ce;
   }
 
   input :-ms-input-placeholder { /* Internet Explorer 10+ */
-    font-size: medium;
+    width: 197px;
+    height: 16px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #c4c7ce;
+  }
+
+  .profile {
+    width: 80px;
+    padding: 0 0;
+
+    .dropdown-trigger {
+      width: 80px;
+    }
   }
 
   .profile-picture {
-    margin: 0 30px;
+    margin: 0 20px;
     border-radius: 25px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
+  }
+
+  .notification-number {
+    position: absolute;
+    left: 42px;
+    top: 22px;
+    width: 20px;
+    height: 14px;
+    font-family: Roboto;
+    font-size: 10px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.4;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
+    background: #f59830;
+    border-radius: 6px;
   }
 
   .notifications {
-    max-height: 72px;
+    padding: 0 18px;
+
+    img {
+      margin: auto;
+      max-height: 72px;
+    }
   }
 
 }
