--- a/web/src/App/Home/SideBar/SideBar.scss
+++ b/web/src/App/Home/SideBar/SideBar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   position: fixed;
-  top: 72px;
+  top: 73px;
   bottom: 0;
   width: 72px;
   height: auto;
@@ -9,12 +9,11 @@
   overflow: hidden;
   background: white;
   border-right: 1px solid #DFE2E9;
-  border-top: 1px solid #DFE2E9;
 
 
   .sidebar-inner {
     height: 100%;
-    margin-top: 60px;
+    margin-top: 62px;
   }
 }
 
@@ -27,7 +26,7 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  border-right: 3px solid transparent;
+  border-right: 1px solid transparent;
   background: transparent;
   cursor: default;
 
@@ -54,11 +53,17 @@
     }
 
     span {
-      text-align: center;
-      font-size: 12px;
-      line-height: 11px;
-      color: #7B7E84;
+      font-size: 20px;
       font-weight: 500;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center;
+      width: 200%;
+      -webkit-transform: scale(.5);
+      transform: scale(.5);
+      color: #7B7E84;
       transition: all .2s ease-in-out;
     }
 
@@ -82,7 +87,7 @@
   }
 
   &.item-selected {
-    background: transparent;
+    background: #eef8ff;
     border-color: #488EFF;
 
     a {
