--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -3,32 +3,38 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
-  <body style="background-color: #edeef2; padding-left: 25px; padding-right: 35px; padding-bottom: 19px;">
-  <table style="width: 600px;">
-    <tr>
-      <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-        <img style="width: 100%; height: 100%;" alt="logo" title="logo" th:src="${serverAddress} + 'static/images/logo.png'">
-      </td>
-    </tr>
-  </table>
-  <table style="background-color: #FFFFFF; width: 600px; padding: 20px;">
-    <tr>
-      <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">Welcome to interviewed!</td>
-    </tr>
-    <tr>
-      <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-        <span>To get started, please confirm your email address.</span>
-        <br>
-        <span>Thank you for using Interviewed to manage the employees of your company.</span>
-      </td>
-    </tr>
-    <tr>
-      <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
-        <a style="text-decoration: none; padding: 10px 36px; border-radius: 20px; background: #488eff; border: 1px solid transparent;cursor: pointer; display: block; width: 120px; margin-left: auto; margin-right: auto;" th:src="@{${gatewayAddress} + ${accountVerifyAddress}}">
-          <span style="font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff;">Confirm your email</span>
-        </a>
-      </td>
-    </tr>
-  </table>
+  <body>
+    <table style="background-color: #edeef2; padding-left: 25px; padding-right: 35px; padding-bottom: 19px;width: 100%;">
+      <tr>
+        <td style="width: 100%;">
+          <table style="width: 600px; margin-left: auto; margin-right: auto;">
+            <tr>
+              <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
+                <img style="width: 100%; height: 100%;" alt="logo" title="logo" th:src="${serverAddress} + 'images/logo.png'">
+              </td>
+            </tr>
+          </table>
+          <table style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
+            <tr>
+              <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">Welcome to interviewed!</td>
+            </tr>
+            <tr>
+              <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
+                <span>To get started, please confirm your email address.</span>
+                <br>
+                <span>Thank you for using Interviewed to manage the employees of your company.</span>
+              </td>
+            </tr>
+            <tr>
+              <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
+                <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #488eff; border: 1px solid transparent;cursor: pointer; display: block;     width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;" th:href="@{${gatewayAddress} + ${accountVerifyAddress}}">
+                  Confirm your email
+                </a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
