jira/SH-15 Employer Registration Signup Page

--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -10,7 +10,7 @@
           <table style="width: 600px; margin-left: auto; margin-right: auto;">
             <tr>
               <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-                <img style="width: 100%; height: 100%;" alt="logo" title="logo" th:src="${serverAddress} + 'images/logo.png'">
+                <img style="width: 100%; height: 100%;" alt="logo" title="logo" th:src="${frontEndAddress} + 'image/colorlogo.png'">
               </td>
             </tr>
           </table>
