--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
               <td style="display: block; margin: 20px auto 10px auto; width: 100%;">
-                <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #488eff; border: 1px solid transparent;cursor: pointer; display: block;     width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;" th:href="@{${gatewayAddress} + ${accountVerifyAddress}}">
+                <a style="text-decoration: none; padding: 10px 20px; border-radius: 20px; background: #488eff; border: 1px solid transparent;cursor: pointer; display: block; width: 150px; margin-left: auto; margin-right: auto;font-size: 14px; font-weight: 500; line-height: 1.17; letter-spacing: .2px; color: #ffffff; text-align: center;" th:href="@{${frontEndAddress} + ${accountVerifyAddress}}">
                   Confirm your email
                 </a>
               </td>
