change the code style

--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
 <table
@@ -11,8 +11,8 @@
       <table style="width: 600px; margin-left: auto; margin-right: auto;">
         <tr>
           <td style="width: 189px; height: 50px; display: block; margin: 10px auto 10px auto;">
-            <img style="width: 100%; height: 100%;" alt="logo" title="logo"
-                 th:src="${frontEndAddress} + 'image/colorlogo.png'">
+            <img alt="logo" style="width: 100%; height: 100%;" th:src="${frontEndAddress} + 'image/colorlogo.png'"
+                 title="logo">
           </td>
         </tr>
       </table>
