--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -40,7 +40,7 @@
                          </tr>
                          <tr>
                            <td style="padding-top: 33px; height: 40px; text-align: center; padding-bottom: 47px;">
-                             <a th:href="@{${frontEndAddress} + 'account/create-password'}"
+                             <a th:href="@{${createPasswordAddress}}"
                                 style="background-color: #488eff; color: #ffffff; outline: none; box-shadow: none; border: 0; width: 153px; height: 40px; font-size: 14px; border-radius: 400px; cursor: pointer; display: inline-block; line-height: 42px; text-decoration: none">Get
                                Started</a></td>
                          </tr>
