152: time off requests improvement (#147)
152: time off requests improvement (#147)

--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -11,7 +11,7 @@
         type="text/css">
 </head>
 <body>
-<div style="background-color: #edeef2; width: 600px; padding: 32px 0px">
+<div style="margin: auto; background-color: #edeef2; width: 600px; padding: 32px 0px">
   <div align="center" style="padding: 0 24px">
     <div style="width: 565px">
       <img style="width: 165px; height: 38px"
