--- a/src/main/resources/templates/time_off_request_approve_deny.html
+++ b/src/main/resources/templates/time_off_request_approve_deny.html
@@ -15,7 +15,7 @@
 
     <div style="width: 552px;height: 53px;display: flex;
     align-items: center;justify-content: center; color: #2e3033;"
-         th:styleappend="${status}=='APPROVED'? 'background: #f3fffd;' : 'background: #f3fffd;'"
+         th:styleappend="${status}=='APPROVED'? 'background: #f3fffd;' : 'background: #ffefef;'"
     >
       <img style="width: 19px;height: 20px;margin-right: 8px;"
            th:if="${status} eq 'APPROVED'"
