--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div style="padding: 0 30px; width: 490px;" th:fragment="comment"
-     th:if="${comment} or ${approverComment}">
+     th:if="${comment} or ${approverComments}">
   <div style="overflow: hidden;padding: 15px 0;" th:if="${comment}">
     <img
         style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-        th:src="${requesterImageUrl}"
+        th:src="${pathPrefix+requesterImageUrl}"
     >
 
     <div
@@ -24,13 +24,13 @@
               border-right: 10px solid white;float: left;right: 19px;top: 16px;position: relative;"></div>
 
       <div
-          style="font-size: 14px; max-height: 100%; width: fit-content; height: fit-content; margin: 4%; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+          style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 15px 15px 0; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
           th:text="${comment}">
       </div>
     </div>
   </div>
 
-  <div style="overflow: hidden; padding: 15px 0;" th:if="${approverComment}">
+  <div style="overflow: hidden; padding: 15px 0;" th:each="approverComment : ${approverComments}">
     <div
         style="width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative; float: left">
 
@@ -43,15 +43,15 @@
               border-left: 10px solid white;float: right;left: 19px;top: 16px;position: relative;"></div>
 
       <div
-          style="font-size: 14px; max-height: 100%; width: fit-content; height: fit-content; margin: 4%; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
-          th:text="${approverComment}">
+          style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 0 15px 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+          th:text="${approverComment.comment}">
       </div>
 
 
     </div>
     <img
         style="float: right; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-        th:src="${approverImageUrl}"
+        th:src="${pathPrefix+approverComment.user.getImageUrl()}"
     >
 
   </div>
