--- a/src/main/resources/templates/time_off_request_pending.html
+++ b/src/main/resources/templates/time_off_request_pending.html
@@ -25,7 +25,7 @@
     </div>
     <div style="text-align: center;">
       <img style="border: solid 1px #dfe2e9;width: 88px;height: 88px; border-radius: 50%"
-           th:src="@{${requesterImageUrl}}">
+           th:src="@{${pathPrefix+requesterImageUrl}}">
     </div>
 
     <div style="padding-top: 20px; text-align: center; font-size: 16px; line-height: 1.5;">
