257: time off email fix bugs (#187)
257: time off email fix bugs (#187)

--- a/src/main/resources/templates/time_off_request_approve.html
+++ b/src/main/resources/templates/time_off_request_approve.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      th:replace="~{base_email :: layout(~{::section})}" xmlns="http://www.w3.org/1999/xhtml"
+      th:replace="~{base_email :: layout(~{::table})}" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
@@ -9,43 +9,60 @@
 </head>
 <body>
 
-<section>
-  <div style="width: 552px;border-radius: 4px;
+<table style="border-spacing: 0px;">
+  <tbody style="width: 552px;border-radius: 4px;
   font-size: 14px;font-family: Roboto;background-color: #ffffff;">
 
-    <div style="width: 552px;height: 53px;display: flex;
-    align-items: center;justify-content: center; color: #2e3033; background: #f3fffd;"
-    >
+  <tr>
+    <td align="center"
+        style="width: 522px;padding: 15px;background-color: #f3fffd; color: #2e3033;">
       <img style="width: 19px;height: 20px;margin-right: 8px;"
            th:src="@{${frontEndAddress}+'image/approve.svg'}">
       &nbsp;&nbsp;
       <span>Approved by</span>&nbsp;
       <span th:text="${approverName}">approver name</span>
-    </div>
+    </td>
+  </tr>
 
-    <div th:if="${toManager}" th:insert="components/request::requster"></div>
 
-    <div th:insert="components/request::time" style="margin: 20px">
-    </div>
+  <tr th:if="${toManager}" th:replace="components/request::requster"></tr>
 
-    <div style="padding: 0 30px">
-      <div
-          style="border-top: solid 1px #dfe2e9; height: 52px; font-weight: 500;display: flex; align-items: center;">
-        Remaining Balance if Approved: <span th:text="${remain} + (${remain} > 1 ? ' Hours': 'Hour')"></span>
-      </div>
-      <div
-          style="font-weight: 500;border-top: solid 1px #dfe2e9; border-bottom: solid 1px #dfe2e9; height: 52px; display: flex; align-items: center;">
-        Time Off Conflicts: <span th:text="${conflict}"></span>
-      </div>
+  <tr th:replace="components/request::time" style="margin: 20px">
+  </tr>
 
-    </div>
+  <tr>
+    <td style="padding-top: 15px;">
+      <table width="552px" style="padding: 0 30px">
+        <tbody>
+        <tr th:if="${isLimited}">
+          <td
+              style="border-top: solid 1px #dfe2e9;padding: 20px 0; margin: 0 30px; font-weight: 500; align-items: center;">
+            Remaining Balance:
+            <span th:text="${remain} + (${remain} > 1 ? ' Hours': 'Hour')"></span>
+          </td>
+        </tr>
+        <tr>
+          <td
+              style="font-weight: 500;border-top: solid 1px #dfe2e9; border-bottom: solid 1px #dfe2e9; padding: 20px 0; align-items: center;">
+            Time Off Conflicts: <span th:text="${conflict}"></span>
+          </td>
 
-    <div th:replace="components/request::comment"></div>
+        </tr>
+        <tr>
+          <td th:insert="components/request::comment" style="padding: 15px 0;">
 
-    <div th:replace="components/request::viewDetail"></div>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
 
-  </div>
-</section>
+
+  <tr th:replace="components/request::viewDetail"></tr>
+
+  </tbody>
+</table>
 
 </body>
 </html>
