--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -11,26 +11,48 @@
         type="text/css">
 </head>
 <body>
-<div style="margin: auto; background-color: #edeef2; width: 600px; padding: 32px 0px">
-  <div align="center" style="padding: 0 24px">
-    <div style="width: 565px">
-      <img style="width: 165px; height: 38px"
-           th:src="@{${frontEndAddress} + 'image/colorlogo.png'}">
-    </div>
+<center style="margin: auto; background-color: #edeef2; width: 615px; padding: 32px 0px">
+  <table align="center" style="padding: 0 24px; border: 0; width: 600px">
+    <tbody>
+    <tr align="center" style="width: 565px">
+      <td style="padding-bottom: 20px;">
+        <img style="width: 165px; height: 38px"
+             th:src="@{${frontEndAddress} + 'image/colorlogo.png'}">
+      </td>
+    </tr>
 
-    <div
+    <tr align="center"
         style="margin-top: 14px; background-color: #ffffff; border-radius: 4px; width: 552px;">
-      <div th:replace="${content}">
-        <p>Layout content</p>
-      </div>
-    </div>
+      <td style="padding: 0;">
+        <table th:replace="${content}">Layout content</table>
+      </td>
+    </tr>
 
-    <div style="padding-top: 24px; font-size: 13px; line-height: 1.38; color: #7b7e84">
-      <div>© 2019 Interviewed</div>
-      <div>177 Broad St, Stamford, CT 06901</div>
-      <a style="text-decoration: none; color: #488eff" th:href="@{${helpUrl}}">Help</a>
-    </div>
-  </div>
-</div>
+    <tr align="center" style="font-size: 13px; line-height: 1.38; color: #7b7e84">
+      <td style="padding-top: 24px;">
+        <table>
+          <tr>
+            <td align="center">
+              © 2019 Interviewed
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              177 Broad St, Stamford, CT 06901
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              <a style="text-decoration: none; color: #488eff" th:href="@{${helpUrl}}">Help</a>
+            </td>
+          </tr>
+        </table>
+      </td>
+
+    </tr>
+    </tbody>
+
+  </table>
+</center>
 </body>
 </html>
