--- a/src/main/resources/templates/components/request.html
+++ b/src/main/resources/templates/components/request.html
@@ -5,101 +5,179 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<div style="padding: 0 30px; width: 490px;" th:fragment="comment"
-     th:if="${comment} or ${approverComments}">
-  <div style="overflow: hidden;padding: 15px 0;" th:if="${comment}">
-    <img
-        style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-        th:src="${pathPrefix+requesterImageUrl}"
-    >
+<table style="width: 490px;" th:fragment="comment"
+       th:if="${comment} or ${approverComments}">
+  <tbody>
+  <tr style="overflow: hidden;padding: 15px 0;" th:if="${comment}">
+    <td>
+      <table>
+        <tbody>
+        <tr>
+          <td>
+            <table>
+              <tbody style=" width: 45px;">
+              <tr>
+                <td>
+                  <img
+                      style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
+                      th:src="${pathPrefix+requesterImageUrl}"
+                  >
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
 
-    <div
-        style="float:right; width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative;">
-      <div
-          style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
+          <td>
+            <table style="width: 420px;">
+              <tbody>
+              <tr>
+                <td
+                    style="float:right; width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative;">
+                  <div
+                      style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
               border-right: 10px solid #dfe2e9;
               float: left;right: 10px;top: 16px;position: relative;"></div>
-      <div
-          style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
+                  <div
+                      style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
               border-right: 10px solid white;float: left;right: 19px;top: 16px;position: relative;"></div>
 
-      <div
-          style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 15px 15px 0; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
-          th:text="${comment}">
-      </div>
-    </div>
-  </div>
+                  <div
+                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 15px 15px 0; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+                      th:text="${comment}">
+                  </div>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
 
-  <div style="overflow: hidden; padding: 15px 0;" th:each="approverComment : ${approverComments}">
-    <div
-        style="width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative; float: left">
+  <tr style="overflow: hidden; padding: 15px 0;" th:each="approverComment : ${approverComments}">
 
-      <div
-          style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
+    <td>
+      <table>
+        <tbody>
+        <tr>
+          <td>
+            <table style=" width: 420px;">
+              <tbody>
+              <tr>
+                <td
+                    style="width: 420px; border-radius: 5px; border: solid 1px #dfe2e9; position: relative; float: left">
+
+                  <div
+                      style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
               border-left: 10px solid #dfe2e9;
               float: right;left: 10px;top: 16px;position: relative;"></div>
-      <div
-          style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
+                  <div
+                      style="border-top: 10px solid transparent;border-bottom: 10px solid transparent;
               border-left: 10px solid white;float: right;left: 19px;top: 16px;position: relative;"></div>
 
-      <div
-          style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 0 15px 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
-          th:text="${approverComment.comment}">
+                  <div
+                      style="text-align: left; font-size: 14px; max-height: 100%; width: 400px; height: fit-content; margin: 15px 0 15px 15px; overflow: hidden; text-overflow: ellipsis; line-height: 1.3;"
+                      th:text="${approverComment.comment}">
+                  </div>
+
+
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+
+          <td>
+            <table style="width: 45px;">
+              <tbody>
+              <tr>
+                <td>
+                  <img
+                      style="float: right; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
+                      th:src="${pathPrefix+approverComment.user.getImageUrl()}"
+                  >
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </td>
+  </tr>
+  </tbody>
+</table>
+
+
+<tr th:fragment="time">
+  <td>
+    <div style="margin: auto; padding-top: 10px; border: solid 1px #dfe2e9;
+  font-size: 16px; text-align: center; line-height: 1.56;  width: 277px;
+  height: 156px; border-radius: 5px;">
+      <img style="margin: 10px auto; height: 60px; width: 60px;"
+           th:src="@{${frontEndAddress}+'image/timeOff.svg'}">
+
+      <div style="font-weight: 500" th:text="${type}">Vacation</div>
+
+      <div style="padding-bottom: 20px;font-size: 16px;line-height: 1.5; text-align: center;">
+        <span th:text="${timeRange}"></span>&nbsp;(<span th:text="${hours}"></span>&nbsp;hours)
       </div>
-
-
     </div>
-    <img
-        style="float: right; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-        th:src="${pathPrefix+approverComment.user.getImageUrl()}"
-    >
+  </td>
+</tr>
 
-  </div>
-</div>
-
-
-<div
-    th:fragment="time"
-    style="margin: auto; padding-top: 10px; border: solid 1px #dfe2e9;
-     font-size: 16px; text-align: center; line-height: 1.56;  width: 277px;
-     height: 156px; border-radius: 5px;">
-  <img style="margin: 10px auto; height: 60px; width: 60px;"
-       th:src="@{${frontEndAddress}+'image/timeOff.svg'}">
-
-  <div style="font-weight: 500" th:text="${type}">Vacation</div>
-
-  <div style="padding-bottom: 20px;font-size: 16px;line-height: 1.5; text-align: center;">
-    <span th:text="${timeRange}"></span>&nbsp;(<span th:text="${hours}"></span>&nbsp;hours)
-  </div>
-</div>
-
-<div
+<tr
     th:fragment="requster"
-    style="height: 46px; display: flex; align-items: center; justify-content: center;
-     color: #2e3033; line-height: 0.78; letter-spacing: 0.4px;font-size: 18px;">
-  <img
-      style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
-      th:src="${pathPrefix+requesterImageUrl}"
-  >
-  &nbsp;&nbsp;
-  <a style="color: #488eff;text-decoration: none;"
-     th:href="@{${frontEndAddress}+'employees/'+${requesterId}}"
-     th:text="${requesterName}">name</a>
-  &nbsp;Requested Time Off
-</div>
+    style="height: 46px;color: #2e3033; line-height: 0.78; letter-spacing: 0.4px;font-size: 18px;">
+  <td align="center" style="padding: 15px">
+    <table>
+      <tbody>
+      <tr>
+        <td>
+          <img
+              style="float:left; width: 45px; height: 45px; border: 1px solid gray; border-radius: 50%; overflow: hidden"
+              th:src="${pathPrefix+requesterImageUrl}"
+          >
+          &nbsp;&nbsp;
+        </td>
 
+        <td>
+          <table>
+            <tbody>
+            <tr>
+              <td style="padding: 10px 0">
+                <a style="color: #488eff;text-decoration: none;"
+                   th:href="@{${frontEndAddress}+'employees/'+${requesterId}}"
+                   th:text="${requesterName}">name</a>
+                &nbsp;Requested Time Off
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </td>
+</tr>
 
-<div
-    th:fragment="viewDetail"
-    style=" margin-top: 30px; padding: 30px;display: flex; justify-content: center; align-items: center; font-weight: 500; background: #f7f8fa;">
-  <a style="text-decoration: none;cursor: pointer; padding-right: 10px"
-     th:href="@{${frontEndAddress}+'time-off'}">
-    <div
-        style="width: 170px; height: 40px; border-radius: 20px; border: solid 1px #d8dadf; background-color: white;">
-      <div style="text-align:center; line-height: 40px; color: #488eff;">View Full Details</div>
-    </div>
-  </a>
-</div>
+<tr th:fragment="viewDetail">
+  <td align="center"
+      style=" margin-top: 30px; padding: 30px; font-weight: 500; background: #f7f8fa;">
+    <a style="text-decoration: none;cursor: pointer; padding-right: 10px"
+       th:href="@{${frontEndAddress}+'time-off'}">
+      <div
+          style="width: 170px; height: 40px; border-radius: 20px; border: solid 1px #d8dadf; background-color: white;">
+        <div style="text-align:center; line-height: 40px; color: #488eff;">View Full Details</div>
+      </div>
+    </a>
+  </td>
+</tr>
+
 
 </body>
 </html>
