552: verify new work email (#316)
* code update

--- a/src/main/resources/templates/verify_change_work_email.html
+++ b/src/main/resources/templates/verify_change_work_email.html
@@ -18,12 +18,12 @@
       style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">
-        Verify New Work Email.
+        Verify New Work Email
       </td>
     </tr>
     <tr>
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-        <span>You will use your new work email to sign into.</span>
+        <span>You will use your new work email to sign into</span>
         <br>
         <span>interviewed.com after it's been verified.</span>
       </td>
