--- a/src/main/resources/templates/base_email.html
+++ b/src/main/resources/templates/base_email.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <center style="margin: auto; background-color: #edeef2; width: 615px; padding: 32px 0px">
-  <table align="center" style="padding: 0 24px; border: 0; width: 600px">
+  <table align="center" style="padding: -1px 24px; border: 0; width: 600px">
     <tbody>
     <tr align="center" style="width: 565px">
       <td style="padding-bottom: 20px;">
