--- a/src/main/resources/templates/employee_invitation_email.html
+++ b/src/main/resources/templates/employee_invitation_email.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome to Champion Solutions!</title>
+  <title th:text="'Welcome to ' + ${companyName} + '!'"></title>
 </head>
 <body>
 <div align="center" style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
@@ -25,8 +25,7 @@
               <table style="width: 100%;height: 100%; border-collapse: collapse;">
                 <tbody>
                 <tr>
-                  <td style="padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;">
-                    Welcome to Champion Solutions!
+                  <td th:text="'Welcome to ' + ${companyName} + '!'" style="padding-top: 47px; font-size: 24px; width: 355px; height: 28px; text-align: center;">
                   </td>
                 </tr>
                 <tr>
