618: Text that says Interviewed.com should now be SimplyHired.com (#331)
618: Text that says Interviewed.com should now be SimplyHired.com (#331)

--- a/src/main/resources/templates/account_verify_email.html
+++ b/src/main/resources/templates/account_verify_email.html
@@ -18,14 +18,14 @@
           style="background-color: #FFFFFF; padding: 20px;width: 600px; margin-left: auto; margin-right: auto;">
     <tr>
       <td style="font-size: 24px; line-height: 1.38; color: #2e3033; text-align: center; padding-top: 10px; padding-bottom: 20px;">
-        Welcome to interviewed!
+        Welcome to SimplyHired!
       </td>
     </tr>
     <tr>
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
         <span>To get started, please confirm your email address.</span>
         <br>
-        <span>Thank you for using Interviewed to manage the employees of your company.</span>
+        <span>Thank you for using SimplyHired to manage the employees of your company.</span>
       </td>
     </tr>
     <tr>
