--- a/src/main/resources/templates/password_change_email.html
+++ b/src/main/resources/templates/password_change_email.html
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
-        <span>The password for your interviewed account has been changed.</span>
+        <span>The password for your SimplyHired account has been changed.</span>
       </td>
     </tr>
 
