--- a/src/main/resources/templates/verify_change_work_email.html
+++ b/src/main/resources/templates/verify_change_work_email.html
@@ -25,7 +25,7 @@
       <td style="font-size: 16px; line-height: 1.38; color: #7b7e84; text-align: center;">
         <span>You will use your new work email to sign into</span>
         <br>
-        <span>interviewed.com after it's been verified.</span>
+        <span>SimplyHired after it's been verified.</span>
       </td>
     </tr>
     <tr>
